[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/cube_divided.glb" type="PackedScene" id=2]
[ext_resource path="res://resources/material_r.material" type="Material" id=3]
[ext_resource path="res://resources/material_g.material" type="Material" id=4]
[ext_resource path="res://resources/material_b.material" type="Material" id=5]
[ext_resource path="res://scripts/block.gd" type="Script" id=6]
[ext_resource path="res://audio/girar.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/mover2.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/encaixar4.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/quebrar2.ogg" type="AudioStream" id=10]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5 )

[node name="cube_divided" instance=ExtResource( 2 )]
script = ExtResource( 6 )

[node name="g6" parent="." index="0"]
material/0 = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="g6" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="g6/StaticBody" index="0"]
shape = SubResource( 1 )

[node name="r1" parent="." index="1"]
material/0 = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="r1" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="r1/StaticBody" index="0"]
shape = SubResource( 2 )

[node name="g3" parent="." index="2"]
material/0 = ExtResource( 4 )

[node name="StaticBody" type="StaticBody" parent="g3" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="g3/StaticBody" index="0"]
shape = SubResource( 3 )

[node name="r2" parent="." index="3"]
material/0 = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="r2" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="r2/StaticBody" index="0"]
shape = SubResource( 4 )

[node name="b5" parent="." index="4"]
material/0 = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="b5" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="b5/StaticBody" index="0"]
shape = SubResource( 5 )

[node name="b4" parent="." index="5"]
material/0 = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="b4" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="b4/StaticBody" index="0"]
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="." index="6"]

[node name="RotationAudio" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource( 7 )

[node name="TranslationAudio" type="AudioStreamPlayer3D" parent="." index="8"]
stream = ExtResource( 8 )

[node name="FitAudio" type="AudioStreamPlayer3D" parent="." index="9"]
stream = ExtResource( 9 )

[node name="BreakAudio" type="AudioStreamPlayer3D" parent="." index="10"]
stream = ExtResource( 10 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
